log/build_2024-12-04_14-52-29/myagv_ros2_odometry/stderr.log
  File "/home/sara/myagv_ros2/install/myagv_ros2_odometry/lib/python3.10/site-packages/myagv_ros2_odometry/myagvimupublish.py", line 86
    sara@sara:~/mya
             ^
SyntaxError: invalid syntax

